[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/enemy.gd" type="Script" id=1]
[ext_resource path="res://art/sheet.ufoGreen.atex" type="Texture" id=2]
[ext_resource path="res://scenes/enemy_paths.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/enemy_laser.wav" type="Sample" id=4]
[ext_resource path="res://art/corona.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 35.8504

[sub_resource type="Animation" id=2]

resource/name = "hit"
length = 0.25
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="SampleLibrary" id=4]

samples/enemy_laser = {
"db": -3.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}

[node name="enemy" type="Area2D"]

transform/pos = Vector2( -47.6131, -51.6943 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="."]

transform/rot = 89.4901
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hit = SubResource( 2 )
anims/rotate = SubResource( 3 )
playback/active = true
playback/speed = 0.6
blend_times = [  ]
autoplay = "rotate"

[node name="enemy_paths" parent="." instance=ExtResource( 3 )]

[node name="bullet_container" type="Node" parent="."]

[node name="shoot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="sounds" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="trail" type="Particles2D" parent="."]

visibility/behind_parent = true
visibility/blend_mode = 1
config/amount = 20
config/lifetime = 1.0
config/process_mode = 1
config/half_extents = Vector2( 15, 15 )
config/local_space = false
config/explosiveness = 0.9
config/texture = ExtResource( 5 )
params/direction = 0.0
params/spread = 25.0
params/linear_velocity = 0.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 0.2
params/final_size = 0.0
params/hue_variation = 0.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/direction = 1.0
randomness/spread = 0.5
randomness/linear_velocity = 0.5

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]


